# audio-control

./: .gitignore  README.md  config.yaml  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: audio.rs  config.rs  lib.rs  main.rs  orchestrator.rs  whisper.rs
src-tauri/src/audio/: mod.rs  processor.rs  recorder.rs  storage.rs
src-tauri/src/command/: detector.rs  mod.rs
src-tauri/src/transcription/: mod.rs  service.rs  whisper.rs
src/lib/: Greet.svelte  Transcribe.svelte
src/routes/: +page.svelte
