[package]
name = "app"
version = "0.1.0"
description = "Transcribes Microphone audio locally"
authors = ["Nicloas Neudeck"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "app_lib"
# crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
tauri = { version = "2.3.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
cpal = "0.15"
hound = "3.5"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19.0"
vad-rs = "0.1.5"


[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { git = "https://github.com/thewh1teagle/whisper-rs.git", branch = "v1.6.3-beta.0", features = [
    "whisper-cpp-tracing",
    "coreml",
] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { git = "https://github.com/thewh1teagle/whisper-rs.git", branch = "v1.6.3-beta.0", features = [
    "whisper-cpp-tracing",
    "vulkan",
] }
